--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@amcharts/amcharts4": "^4.10.10",
         "@fortawesome/fontawesome-free": "^5.15.1",
         "datatables.net": "^1.10.22",
         "datatables.net-bs4": "^1.10.22",
