--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "tests/Utilities/functions.php"
+        ]
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
