--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     },
     "dependencies": {
         "@amcharts/amcharts4": "^4.10.10",
+        "currency.js": "^2.0.3",
         "datatables.net": "^1.10.23",
         "datatables.net-bs": "^1.10.23",
         "daterangepicker": "^3.1.0",
         "jquery-validation": "^1.19.2",
         "mathjs": "^7.5.1",
+        "moment": "^2.29.1",
         "overlayscrollbars": "^1.13.0",
         "rrule": "^2.6.6",
         "select2": "^4.0.13"
