--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-/code_coverage_results
+/.vscode
 /node_modules
 /public/hot
 /public/storage
 /storage/*.key
-/storage/fin_migrations
+/storage/code_coverage_results
 /storage/debugbar
+/storage/fin_migrations
 /vendor
 .env
 .env.backup
