--- a/package.json
+++ b/package.json
@@ -2,22 +2,31 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "npm run development --watch",
+        "watch-poll": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --watch-options-poll=1000 --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@vue/compiler-sfc": "^3.1.1",
         "axios": "^0.21.1",
+        "bootstrap": "^4.6.0",
         "cross-env": "^7.0.3",
-        "laravel-mix": "^5.0.9",
+        "css-loader": "^5.2.6",
+        "file-loader": "^6.2.0",
+        "jquery": "^3.6",
+        "laravel-mix": "^6.0.6",
         "lodash": "^4.17.21",
+        "mini-css-extract-plugin": "^1.6.0",
         "node-sass": "^4.14.1",
+        "popper.js": "^1.16.1",
+        "postcss": "^8.3.2",
         "resolve-url-loader": "^3.1.2",
-        "sass-loader": "^8.0.0",
-        "vue-template-compiler": "^2.6.12"
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "vue": "^3.1.1"
     },
     "dependencies": {
         "@amcharts/amcharts4": "^4.10.17",
@@ -30,6 +39,7 @@
         "moment": "^2.29.1",
         "overlayscrollbars": "^1.13.0",
         "rrule": "^2.6.8",
-        "select2": "^4.0.13"
+        "select2": "^4.0.13",
+        "vue-loader": "^16.2.0"
     }
 }
