--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
         "datatables.net": "^1.10.24",
         "datatables.net-bs": "^1.10.24",
         "daterangepicker": "^3.1.0",
-        "jquery-validation": "^1.19",
         "mathjs": "^7.5.1",
         "moment": "^2.29.1",
         "overlayscrollbars": "^1.13.0",
         "rrule": "^2.6.8",
         "select2": "^4.0.13",
-        "vue-loader": "^16.2.0"
+        "vform": "^2.1.0",
+        "vue-loader": "^16.2.0",
+        "vue2-datepicker": "^4.0.0-beta.2"
     }
 }
