[wip] transaction form

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "laravel/tinker": "^2.5",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
+        "nunomaduro/phpinsights": "^2.0",
         "phpunit/phpunit": "^9.5"
     },
     "config": {
