--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,13 @@
 {
     "name": "kantorge/yaffa",
     "type": "project",
-    "description": "Yet Another Fancy Financial Application",
+    "description": "Yet Another Free Financial Application",
     "keywords": [
         "personal finance",
-        "laravel"
+        "laravel",
+        "yaffa"
     ],
-    "license": "TBD",
+    "license": "MIT",
     "require": {
         "php": "^7.3",
         "almasaeed2010/adminlte": "~2.4",
@@ -16,7 +17,8 @@
         "laracasts/utilities": "^3.2",
         "laravel/framework": "^8.12",
         "nesbot/carbon": "^2.40",
-        "simshaun/recurr": "^4.0"
+        "simshaun/recurr": "^4.0",
+        "tightenco/ziggy": "^1.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
