[fix] deploy behavior

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "phpunit/phpunit": "^9.5"
     },
     "config": {
+        "discard-changes": true,
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true
