--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^7.3",
         "almasaeed2010/adminlte": "~2.4",
         "amrshawky/laravel-currency": "^4.0",
+        "enlightn/enlightn": "^1.22",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
