--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,18 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laracasts/utilities": "^3.2",
         "laravel/framework": "^8.12",
+        "laravel/sanctum": "^2.12",
+        "laravel/ui": "^3.3",
         "nesbot/carbon": "^2.40",
         "simshaun/recurr": "^4.0",
         "tightenco/ziggy": "^1.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
+        "barryvdh/laravel-ide-helper": "^2.10",
         "facade/ignition": "^2.5",
         "imanghafoori/laravel-microscope": "^1.0",
+        "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
@@ -41,23 +45,23 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/telescope"
+            ]
         }
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Tests\\": "tests/"
         }
     },
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        },
-        "files": [
-            "tests/Utilities/functions.php"
-        ]
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -71,6 +75,11 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "php artisan ide-helper:generate",
+            "php artisan ide-helper:meta"
         ]
     }
 }
