--- a/.env.example
+++ b/.env.example
@@ -47,7 +47,12 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-TELESCOPE_ENABLED=false
-
 REGISTERED_USER_LIMIT=1
 ADMIN_EMAIL=admin@example.com
+
+# Debug related settings
+TELESCOPE_ENABLED=false
+
+# Settings for Enlightn web UI reports
+ENLIGHTN_USERNAME=your_enlightn_username
+ENLIGHTN_API_TOKEN=your_enlightn_token
