--- a/.env.ci
+++ b/.env.ci
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=test
-DB_USERNAME=root
-DB_PASSWORD=password
+DB_DATABASE=testing
+DB_USERNAME=user
+DB_PASSWORD=secret
 
 ALPHA_VANTAGE_KEY=ABC
 
