--- a/.env.ci
+++ b/.env.ci
@@ -1,17 +1,17 @@
 APP_NAME=YAFFA
 APP_ENV=local
 APP_KEY=ThisIsThe32CharacterKeySecureKey
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=testing
-DB_USERNAME=user
+DB_USERNAME=yaffa
 DB_PASSWORD=secret
 
 ALPHA_VANTAGE_KEY=ABC
@@ -26,9 +26,9 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_MAILER=array
+MAIL_HOST=null
+MAIL_PORT=null
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
