--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,4 +29,4 @@ jobs:
       run: ln -f -s .env.ci .env
 
     - name: Run Testsuite
-      run: vendor/bin/phpunit --colors=never --verbose
+      run: vendor/bin/phpunit --colors=never --verbose tests/
