--- a/.env.ci
+++ b/.env.ci
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
-DB_PORT=3306
-DB_DATABASE=testing
-DB_USERNAME=yaffa
-DB_PASSWORD=secret
+DB_HOST_TEST=mysql
+DB_PORT_TEST=3306
+DB_DATABASE_TEST=testing
+DB_USERNAME_TEST=yaffa
+DB_PASSWORD_TEST=secret
 
 ALPHA_VANTAGE_KEY=ABC
 
