--- a/.env.ci
+++ b/.env.ci
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=mysql_test
 DB_HOST_TEST=mysql
 DB_PORT_TEST=3306
 DB_DATABASE_TEST=testing
