--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,9 @@ jobs:
 
     steps:
     - name: Setup PHP Action
-      uses: shivammathur/setup-php
+      uses: shivammathur/setup-php@2.15.0
       with:
-        extensions: intl
-        php-version: "${{ matrix.php-versions }}"
+        php-version: 7.4
         coverage: pcov
 
     - uses: actions/checkout@v2
