--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,9 @@ jobs:
 
     steps:
     - name: Setup PHP Action
-      uses: shivammathur/setup-php@2.15.0
+      uses: shivammathur/setup-php@v2
       with:
-        php-version: 7.4
+        php-version: '7.4'
         coverage: pcov
 
     - uses: actions/checkout@v2
