--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,9 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '7.4'
-        coverage: pcov
+        coverage: xdebug
+      env:
+        fail-fast: true
 
     - uses: actions/checkout@v2
 
