--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Run Migration
       run: php artisan migrate -v
       env:
-          DB_PORT: ${{ job.services.mysql.ports['3306'] }}
+          DB_PORT_TEST: ${{ job.services.mysql.ports['3306'] }}
 
     - name: Run Testsuite
       run: vendor/bin/phpunit --colors=never --verbose --coverage-clover=coverage.xml tests/
@@ -68,4 +68,4 @@ jobs:
         name: codecov-umbrella
         fail_ci_if_error: true
       env:
-          DB_PORT: ${{ job.services.mysql.ports['3306'] }}
+          DB_PORT_TEST: ${{ job.services.mysql.ports['3306'] }}
