--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "overlayscrollbars": "^1.13.1",
         "rrule": "^2.6.8",
         "select2": "^4.0.13",
+        "vanillajs-datepicker": "^1.1.4",
         "vform": "^2.1.2",
         "vue-loader": "^16.8.3",
         "vue2-datepicker": "^4.0.0-beta.2",
