--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
         "jquery": "^3.6",
         "laravel-mix": "^6.0.39",
         "lodash": "^4.17.21",
-        "mini-css-extract-plugin": "^2.4.5",
+        "mini-css-extract-plugin": "^2.4.6",
         "node-sass": "^7.0.1",
         "popper.js": "^1.16.1",
         "postcss": "^8.4.5",
         "resolve-url-loader": "^4.0.0",
-        "sass": "^1.45.2",
+        "sass": "^1.47.0",
         "sass-loader": "^12.4.0",
         "vue": "^3.2.26"
     },
@@ -41,7 +41,6 @@
         "vanillajs-datepicker": "^1.2.0",
         "vform": "^2.1.2",
         "vue-loader": "^16.8.3",
-        "vue2-datepicker": "^4.0.0-beta.2",
-        "xlsx": "^0.17.4"
+        "vue2-datepicker": "^4.0.0-beta.2"
     }
 }
