--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
         "css-loader": "^6.6.0",
         "file-loader": "^6.2.0",
         "jquery": "^3.6",
-        "laravel-mix": "^6.0.42",
+        "laravel-mix": "^6.0.43",
         "lodash": "^4.17.21",
         "mini-css-extract-plugin": "^2.5.3",
         "node-sass": "^7.0.1",
         "popper.js": "^1.16.1",
         "postcss": "^8.4.6",
         "resolve-url-loader": "^4.0.0",
-        "sass": "^1.49.7",
-        "sass-loader": "^12.4.0",
+        "sass": "^1.49.8",
+        "sass-loader": "^12.6.0",
         "vue": "^3.2.31"
     },
     "dependencies": {
-        "@amcharts/amcharts4": "^4.10.23",
+        "@amcharts/amcharts4": "^4.10.24",
         "currency.js": "^2.0.4",
         "datatables.net": "^1.11.4",
         "datatables.net-bs": "^1.11.4",
@@ -38,6 +38,7 @@
         "overlayscrollbars": "^1.13.1",
         "rrule": "^2.6.8",
         "select2": "^4.0.13",
+        "v-calendar": "^3.0.0-alpha.8",
         "vanillajs-datepicker": "^1.2.0",
         "vform": "^2.1.2",
         "vue-loader": "^16.8.3",
