restructure investment price retrieval

--- a/.env.ci
+++ b/.env.ci
@@ -18,7 +18,7 @@ ALPHA_VANTAGE_KEY=ABC
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
