--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,7 @@
 /node_modules
 /public/hot
 /public/storage
-/storage/*.key
-/storage/code_coverage_results
-/storage/debugbar
+/storage
 /vendor
 .env
 .env.backup
