--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "private": true,
     "license": "MIT",
+    "engines": {
+        "node": ">=14.0.0"
+    },
     "scripts": {
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
@@ -12,7 +15,6 @@
     },
     "devDependencies": {
         "@vue/compiler-sfc": "^3.2.31",
-        "axios": "^0.21.4",
         "bootstrap": "^4.6.1",
         "cross-env": "^7.0.3",
         "css-loader": "^6.7.1",
@@ -31,6 +33,7 @@
     },
     "dependencies": {
         "@amcharts/amcharts4": "^4.10.25",
+        "axios": "^0.21.4",
         "currency.js": "^2.0.4",
         "datatables.net": "^1.12.1",
         "datatables.net-bs": "^1.12.1",
