--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     },
     "dependencies": {
         "@amcharts/amcharts4": "^4.10.25",
+        "@vuepic/vue-datepicker": "^3.4.2",
         "axios": "^0.27.2",
         "currency.js": "^2.0.4",
         "datatables.net": "^1.12.1",
         "datatables.net-bs": "^1.12.1",
+        "jquery-csv": "^1.0.21",
+        "json-rules-engine": "^6.1.2",
         "mathjs": "^9.5.2",
         "overlayscrollbars": "^1.13.2",
         "pluralize": "^8.0.0",
@@ -42,7 +45,6 @@
         "v-calendar": "^3.0.0-alpha.8",
         "vanillajs-datepicker": "^1.2.0",
         "vform": "^2.1.2",
-        "vue-loader": "^16.8.3",
-        "vue2-datepicker": "^4.0.0-beta.2"
+        "vue-loader": "^16.8.3"
     }
 }
