--- a/.env.ci
+++ b/.env.ci
@@ -32,7 +32,7 @@ MAIL_PORT=null
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=test@yaffa.cc
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
