--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "barryvdh/laravel-debugbar": "^3.5",
         "imanghafoori/laravel-microscope": "^1.0",
         "kkomelin/laravel-translatable-string-exporter": "^1.17",
+        "laravel/dusk": "^7.1",
         "laravel/pint": "^1.1",
         "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
