--- a/.env.dusk.ci
+++ b/.env.dusk.ci
@@ -12,9 +12,9 @@ DB_CONNECTION=mysql
 # Localhost
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=yaffa_test
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=yaffa
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
