--- a/package.json
+++ b/package.json
@@ -12,34 +12,35 @@
     },
     "devDependencies": {
         "@vue/compiler-sfc": "^3.2.45",
-        "bootstrap": "^4.6.1",
+        "autoprefixer": "^10.4.13",
         "cross-env": "^7.0.3",
-        "css-loader": "^6.7.2",
+        "css-loader": "^6.7.3",
         "file-loader": "^6.2.0",
-        "jquery": "^3.6.1",
         "laravel-mix": "^6.0.49",
-        "mini-css-extract-plugin": "^2.7.1",
+        "mini-css-extract-plugin": "^2.7.2",
         "node-sass": "^7.0.3",
-        "popper.js": "^1.16.1",
-        "postcss": "^8.4.19",
+        "postcss": "^8.4.20",
         "postcss-loader": "^7.0.2",
         "resolve-url-loader": "^4.0.0",
-        "sass": "^1.56.1",
+        "sass": "^1.57.1",
         "sass-loader": "^12.6.0",
+        "style-loader": "^3.3.1",
         "vue": "^3.2.45"
     },
     "dependencies": {
-        "@amcharts/amcharts4": "^4.10.30",
+        "@amcharts/amcharts4": "^4.10.32",
         "@coreui/coreui": "^4.2.4",
         "@coreui/icons": "^2.1.0",
         "@fortawesome/fontawesome-free": "^6.2.1",
         "@popperjs/core": "^2.11.6",
-        "@vuepic/vue-datepicker": "^3.6.0",
-        "axios": "^0.27.2",
+        "@vuepic/vue-datepicker": "^3.6.3",
+        "axios": "^1.2.1",
+        "bootstrap": "^5.2.3",
         "currency.js": "^2.0.4",
         "datatables.net": "^1.13.1",
         "datatables.net-bs5": "^1.13.1",
         "datatables.net-responsive-bs5": "^2.4.0",
+        "jquery": "^3.6.3",
         "jquery-csv": "^1.0.21",
         "json-rules-engine": "^6.1.2",
         "jstree": "^3.3.12",
