--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "kkomelin/laravel-translatable-string-exporter": "^1.17",
         "laravel/dusk": "^7.1",
         "laravel/pint": "^1.1",
+        "laravel/sail": "^1.16",
         "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
         "mockery/mockery": "^1.4.2",
