[fix] testing related fixes

--- a/.env.dusk.ci
+++ b/.env.dusk.ci
@@ -3,6 +3,7 @@ APP_ENV=testing
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://yaffa.test
+APP_SERVICE=yaffa.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -52,7 +53,7 @@ DEBUGBAR_ENABLED=FALSE
 
 ALPHA_VANTAGE_KEY=
 
-TELESCOPE_ENABLED=FALSE
+TELESCOPE_ENABLED=false
 
 REGISTERED_USER_LIMIT=0
 ADMIN_EMAIL=admin@yaffa.test
