--- a/.env.ci
+++ b/.env.ci
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=ThisIsThe32CharacterKeySecureKey
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_SERVICE=yaffa.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
