--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
 APP_URL=http://localhost
+APP_SERVICE=yaffa.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -66,3 +67,7 @@ TS_LOCALES=
 
 # Google Tag Manager
 GTM_CONTAINER_ID=   # If empty, GTM is not loaded
+
+# Sail
+WWWGROUP=1000
+WWWUSER=1000
