--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "laravel/ui": "^3.3",
         "nesbot/carbon": "^2.40",
         "simshaun/recurr": "^4.0",
+        "spatie/laravel-model-flags": "^1.1",
+        "spatie/laravel-onboard": "^2.4",
         "tightenco/ziggy": "^1.3"
     },
     "require-dev": {
