--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "v-calendar": "^3.0.0-alpha.8",
         "vanillajs-datepicker": "^1.2.0",
         "vform": "^2.1.2",
-        "vue": "^3.2.45"
+        "vue": "^3.2.45",
+        "webpack": "^5.75.0"
     }
 }
