--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "nunomaduro/larastan": "^2.0",
         "nunomaduro/phpinsights": "^2.0",
         "phpunit/phpunit": "^9.5",
+        "roquie/laravel-dusk-select2": "^2.1",
         "spatie/laravel-ignition": "^1.0"
     },
     "config": {
