--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,6 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ${{ steps.composer-cache.outputs.dir }}
-        # Use composer.json for key, if composer.lock is not committed.
-        # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
         key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
         restore-keys: ${{ runner.os }}-composer-
 
@@ -76,42 +74,43 @@ jobs:
       env:
           DB_PORT_TEST: ${{ job.services.mysql.ports['3306'] }}
 
-  dusk-php:
-    runs-on: ubuntu-latest
-    env:
-      APP_URL: "http://127.0.0.1:8000"
-      DB_USERNAME: root
-      DB_PASSWORD: root
-      MAIL_MAILER: log
-    steps:
-      - uses: actions/checkout@v3
-      - name: Prepare The Environment
-        run: cp .env.dusk.ci .env
-      - name: Create Database
-        run: |
-          sudo systemctl start mysql
-          mysql --user="root" --password="root" -e "CREATE DATABASE \`yaffa\` character set UTF8mb4 collate utf8mb4_bin;"
-      - name: Install Composer Dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
-      - name: Generate Application Key
-        run: php artisan key:generate
-      - name: Upgrade Chrome Driver
-        run: php artisan dusk:chrome-driver --detect
-      - name: Start Chrome Driver
-        run: ./vendor/laravel/dusk/bin/chromedriver-linux &
-      - name: Run Laravel Server
-        run: php artisan serve --no-reload &
-      - name: Run Dusk Tests
-        run: php artisan dusk
-      - name: Upload Screenshots
-        if: failure()
-        uses: actions/upload-artifact@v2
-        with:
-          name: screenshots
-          path: tests/Browser/screenshots
-      - name: Upload Console Logs
-        if: failure()
-        uses: actions/upload-artifact@v2
-        with:
-          name: console
-          path: tests/Browser/console
+#  Suspended Dusk Tests due to unreliable Select2 testing
+#  dusk-php:
+#    runs-on: ubuntu-latest
+#    env:
+#      APP_URL: "http://127.0.0.1:8000"
+#      DB_USERNAME: root
+#      DB_PASSWORD: root
+#      MAIL_MAILER: log
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Prepare The Environment
+#        run: cp .env.dusk.ci .env
+#      - name: Create Database
+#        run: |
+#          sudo systemctl start mysql
+#          mysql --user="root" --password="root" -e "CREATE DATABASE \`yaffa\` character set UTF8mb4 collate utf8mb4_bin;"
+#      - name: Install Composer Dependencies
+#        run: composer install --no-progress --prefer-dist --optimize-autoloader
+#      - name: Generate Application Key
+#        run: php artisan key:generate
+#      - name: Upgrade Chrome Driver
+#        run: php artisan dusk:chrome-driver --detect
+#      - name: Start Chrome Driver
+#        run: ./vendor/laravel/dusk/bin/chromedriver-linux &
+#      - name: Run Laravel Server
+#        run: php artisan serve --no-reload &
+#      - name: Run Dusk Tests
+#        run: php artisan dusk
+#      - name: Upload Screenshots
+#        if: failure()
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: screenshots
+#          path: tests/Browser/screenshots
+#      - name: Upload Console Logs
+#        if: failure()
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: console
+#          path: tests/Browser/console
