--- a/.env.ci
+++ b/.env.ci
@@ -8,7 +8,7 @@ APP_SERVICE=yaffa.test
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql_test
+DB_CONNECTION=mysql
 DB_HOST_TEST=127.0.0.1
 DB_PORT_TEST=3306
 DB_DATABASE_TEST=testing
