--- a/.env.ci
+++ b/.env.ci
@@ -7,6 +7,11 @@ APP_SERVICE=yaffa.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
+DEBUGBAR_ENABLED=FALSE
+SAIL_XDEBUG_PORT=9003
+SAIL_XDEBUG_MODE=develop,debug
+SAIL_XDEBUG_CONFIG="client_host=host.docker.internal"
+TELESCOPE_ENABLED=false
 
 DB_CONNECTION=mysql_test
 DB_HOST_TEST=127.0.0.1
@@ -36,25 +41,8 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=test@yaffa.cc
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
 REGISTERED_USER_LIMIT=0
 ADMIN_EMAIL=admin@example.com
 
 # Debug related settings
 TELESCOPE_ENABLED=false
-
-# Settings for Enlightn web UI reports
-#ENLIGHTN_USERNAME=your_enlightn_username
-#ENLIGHTN_API_TOKEN=your_enlightn_token
