--- a/.env.ci
+++ b/.env.ci
@@ -13,7 +13,7 @@ SAIL_XDEBUG_MODE=develop,debug
 SAIL_XDEBUG_CONFIG="client_host=host.docker.internal"
 TELESCOPE_ENABLED=false
 
-DB_CONNECTION=mysql_test
+DB_CONNECTION=mysql
 DB_HOST_TEST=127.0.0.1
 DB_PORT_TEST=3306
 DB_DATABASE_TEST=testing
