--- a/.env.ci
+++ b/.env.ci
@@ -16,9 +16,9 @@ TELESCOPE_ENABLED=false
 DB_CONNECTION=mysql
 DB_HOST_TEST=127.0.0.1
 DB_PORT_TEST=3306
-DB_DATABASE_TEST=testing
-DB_USERNAME_TEST=yaffa
-DB_PASSWORD_TEST=secret
+DB_DATABASE=testing
+DB_USERNAME=yaffa
+DB_PASSWORD=secret
 
 ALPHA_VANTAGE_KEY=ABC
 
