--- a/.env.ci
+++ b/.env.ci
@@ -14,8 +14,8 @@ SAIL_XDEBUG_CONFIG="client_host=host.docker.internal"
 TELESCOPE_ENABLED=false
 
 DB_CONNECTION=mysql
-DB_HOST_TEST=127.0.0.1
-DB_PORT_TEST=3306
+DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_DATABASE=testing
 DB_USERNAME=yaffa
 DB_PASSWORD=secret
