--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,12 +54,12 @@ jobs:
     - name: Run Migration
       run: php artisan migrate -v
       env:
-          DB_PORT_TEST: ${{ job.services.mysql.ports['3306'] }}
+          DB_PORT: ${{ job.services.mysql.ports['3306'] }}
 
     - name: Run Testsuite
       run: vendor/bin/phpunit --colors=never --verbose --coverage-clover=coverage.xml --testsuite NonDusk
       env:
-          DB_PORT_TEST: ${{ job.services.mysql.ports['3306'] }}
+          DB_PORT: ${{ job.services.mysql.ports['3306'] }}
 
     - name: Upload coverage to Codacy
       run: bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r coverage.xml -t ${{secrets.CODACY_PROJECT_TOKEN}}
