--- a/.env.ci
+++ b/.env.ci
@@ -17,8 +17,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=testing
-DB_USERNAME=yaffa
-DB_PASSWORD=secret
+DB_USERNAME=default
+DB_PASSWORD=password
 
 ALPHA_VANTAGE_KEY=ABC
 
@@ -43,6 +43,3 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 REGISTERED_USER_LIMIT=0
 ADMIN_EMAIL=admin@example.com
-
-# Debug related settings
-TELESCOPE_ENABLED=false
