--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ ALPHA_VANTAGE_KEY=ABC
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 DEBUGBAR_ENABLED=FALSE
+SAIL_XDEBUG_ENABLED=false
 SAIL_XDEBUG_PORT=9003
 SAIL_XDEBUG_MODE=develop,debug
 SAIL_XDEBUG_CONFIG="client_host=host.docker.internal"
