--- a/composer.json
+++ b/composer.json
@@ -42,8 +42,9 @@
         "nunomaduro/larastan": "^2.0",
         "nunomaduro/phpinsights": "^2.0",
         "phpunit/phpunit": "^9.5",
-        "roquie/laravel-dusk-select2": "^2.1",
-        "spatie/laravel-ignition": "^1.6.4"
+        "roquie/laravel-dusk-select2": "dev-feature/search_selector_delay",
+        "spatie/laravel-ignition": "^1.6.4",
+        "yaroslawww/laravel-dusk-reporter": "^3.1"
     },
     "config": {
         "discard-changes": true,
@@ -98,6 +99,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/kantorge/translation-sheet"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/kantorge/laravel-dusk-select2"
         }
     ]
 }
