--- a/.env.ci
+++ b/.env.ci
@@ -43,3 +43,4 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 REGISTERED_USER_LIMIT=0
 ADMIN_EMAIL=admin@example.com
+INCOMING_RECEIPTS_EMAIL=receipts@yaffa.test
