--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,8 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 REGISTERED_USER_LIMIT=1
 ADMIN_EMAIL=admin@example.com
+INCOMING_RECEIPTS_EMAIL=receipts@example.com
+OPENAI_API_KEY=
 
 #Translation sheet settings. DEV only
 TS_SERVICE_ACCOUNT_EMAIL=
