--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.1",
         "amrshawky/laravel-currency": "^5.0",
+        "beyondcode/laravel-mailbox": "^3.1",
         "enlightn/enlightn": "^2.1",
         "fakerphp/faker": "^1.13",
         "fideloper/proxy": "^4.4",
@@ -21,6 +22,7 @@
         "laravel/sanctum": "^2.12",
         "laravel/ui": "^4.2",
         "nesbot/carbon": "^2.40",
+        "openai-php/laravel": "^0.5.2",
         "simshaun/recurr": "^5.0",
         "spatie/laravel-model-flags": "^1.1",
         "spatie/laravel-onboard": "^2.4",
