--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "simshaun/recurr": "^5.0",
         "spatie/laravel-model-flags": "^1.1",
         "spatie/laravel-onboard": "^2.4",
+        "symfony/http-client": "^6.3",
         "tightenco/ziggy": "^1.3"
     },
     "require-dev": {
