--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.1",
         "amrshawky/laravel-currency": "^5.0",
         "beyondcode/laravel-mailbox": "^3.1",
+        "bkwld/cloner": "^3.11",
         "enlightn/enlightn": "^2.1",
         "fakerphp/faker": "^1.13",
         "fideloper/proxy": "^4.4",
