--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,10 @@ jobs:
       - name: Generate Application Key
         run: php artisan key:generate
       - name: Upgrade Chrome Driver
-        run: php artisan dusk:chrome-driver --detect
+# Temporarily limit Chromium to version 114,
+# as https://chromedriver.storage.googleapis.com/LATEST_RELEAS E_115 is not available
+#        run: php artisan dusk:chrome-driver --detect
+        run: php artisan dusk:chrome-driver 114
       - name: Start Chrome Driver
         run: ./vendor/laravel/dusk/bin/chromedriver-linux &
       - name: Run Laravel Server
