--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,10 +84,7 @@ jobs:
       - name: Generate Application Key
         run: php artisan key:generate
       - name: Upgrade Chrome Driver
-# Temporarily limit Chromium to version 114,
-# as https://chromedriver.storage.googleapis.com/LATEST_RELEAS E_115 is not available
-#        run: php artisan dusk:chrome-driver --detect
-        run: php artisan dusk:chrome-driver 114
+        run: php artisan dusk:chrome-driver --detect
       - name: Start Chrome Driver
         run: ./vendor/laravel/dusk/bin/chromedriver-linux &
       - name: Run Laravel Server
