add missing values to .env.example

--- a/.env.example
+++ b/.env.example
@@ -44,8 +44,6 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 REGISTERED_USER_LIMIT=1
 ADMIN_EMAIL=admin@example.com
-INCOMING_RECEIPTS_EMAIL=receipts@example.com
-OPENAI_API_KEY=
 
 #Translation sheet settings. DEV only
 TS_SERVICE_ACCOUNT_EMAIL=
@@ -59,3 +57,11 @@ GTM_CONTAINER_ID=   # If empty, GTM is not loaded
 # Sail
 WWWGROUP=1000
 WWWUSER=1000
+
+# Mail processing
+INCOMING_RECEIPTS_EMAIL="receipts@yaffa.test"
+
+OPENAI_API_KEY=
+
+MAILBOX_DRIVER=sendgrid
+MAILBOX_HTTP_PASSWORD=
