--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@amcharts/amcharts4": "^4.10.32",
         "@coreui/coreui": "^4.3",
         "@fortawesome/fontawesome-free": "^6.2.1",
+        "@fortawesome/free-brands-svg-icons": "^6.4.2",
         "@popperjs/core": "^2.11.6",
         "@vuepic/vue-datepicker": "^3.6.3",
         "axios": "^1.2.1",
