--- a/.github/workflows/deployer-private.yml
+++ b/.github/workflows/deployer-private.yml
@@ -17,13 +17,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setep PHP
+      - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.1"
 
       - name: Install dependencies
-        run: composer install
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
       - name: Configure SSH
         env:
