ci: fix deployer command

--- a/.github/workflows/deployer-private.yml
+++ b/.github/workflows/deployer-private.yml
@@ -59,4 +59,4 @@ jobs:
         with:
           private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           known-hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
-          dep: deployer-private
+          dep: deploy private
