ci: add missing env variables

--- a/.github/workflows/deployer-private.yml
+++ b/.github/workflows/deployer-private.yml
@@ -55,6 +55,10 @@ jobs:
           END
 
       - name: Deploy Yaffa
+        env:
+          SSH_HOST: ${{ secrets.SSH_HOST }}
+          SSH_USER: ${{ secrets.SSH_USER }}
+          DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
         uses: deployphp/action@master
         with:
           private-key: ${{ secrets.SSH_PRIVATE_KEY }}
