feat: Add option to use Sentry for Laravel

--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,7 @@ OPENAI_API_KEY=
 
 MAILBOX_DRIVER=sendgrid
 MAILBOX_HTTP_PASSWORD=
+
+# Sentry
+SENTRY_LARAVEL_DSN=your-sentry-dsn
+SENTRY_TRACES_SAMPLE_RATE=1.0
