--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -109,7 +109,7 @@ jobs:
           restore-keys: ${{ runner.os }}-node-
 
       - name: Install NPM Dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build Assets
         run: npm run dev
