docs: updates to the .env examples

--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,6 @@ ALPHA_VANTAGE_KEY=ABC
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 DEBUGBAR_ENABLED=FALSE
-SAIL_XDEBUG_ENABLED=false
-SAIL_XDEBUG_PORT=9003
-SAIL_XDEBUG_MODE=develop,debug
-SAIL_XDEBUG_CONFIG="client_host=host.docker.internal"
 TELESCOPE_ENABLED=false
 
 DB_CONNECTION=mysql
@@ -22,6 +18,7 @@ DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
+DB_SOCKET=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -57,6 +54,10 @@ GTM_CONTAINER_ID=   # If empty, GTM is not loaded
 # Sail
 WWWGROUP=1000
 WWWUSER=1000
+SAIL_XDEBUG_ENABLED=false
+SAIL_XDEBUG_PORT=9003
+SAIL_XDEBUG_MODE=develop,debug
+SAIL_XDEBUG_CONFIG="client_host=host.docker.internal"
 
 # Mail processing
 INCOMING_RECEIPTS_EMAIL="receipts@yaffa.test"
@@ -65,6 +66,10 @@ OPENAI_API_KEY=
 
 MAILBOX_DRIVER=sendgrid
 MAILBOX_HTTP_PASSWORD=
+
+# Enlightn - optional, if you want to run the Enlightn security checks and save the results to their online dashboard
+ENLIGHTN_USERNAME=
+ENLIGHTN_API_TOKEN=
 
 # Sentry
 SENTRY_LARAVEL_DSN=your-sentry-dsn
