refactor: separate .env.example files

--- a/.env.example
+++ b/.env.example
@@ -1,76 +1,87 @@
-APP_NAME=YAFFA
-APP_ENV=production
-APP_KEY=
+# This file is a "template" of which env vars need to be defined for your application.
+# Copy this file as .env in the project root folder, and replace the values with your own
+# This version contains the minimal set of variables required to run your own YAFFA instance.
+# For a full list of available variables, see the .env.example.complete file
+
+### Basic app configuration ###
+
+# Encryption key used to encrypt session and other data
+# You can use the "php artisan key:generate" command to generate a random key, which will overwrite this value
+# Make sure to keep this key secret, and don't share it with anyone.
+# Also, don't change it after you have started using the application.
+APP_KEY=PleaseReplaceThisWithARandomStringOf32Chars
+
+# Set this to true if you need to see detailed error messages
 APP_DEBUG=false
-APP_URL=http://localhost
-APP_SERVICE=yaffa.test
 
-ALPHA_VANTAGE_KEY=ABC
-
+# You can specify the log channel to be used for logging
 LOG_CHANNEL=stack
-LOG_LEVEL=debug
-DEBUGBAR_ENABLED=FALSE
-TELESCOPE_ENABLED=false
 
+# The minimum log level to be written to the log files
+LOG_LEVEL=error
+
+### Database configuration ###
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
-DB_SOCKET=
+DB_DATABASE=yaffa_db
+DB_USERNAME=yaffa_user
+DB_PASSWORD=yaffa_password
 
+# Mail configuration
+MAIL_MAILER=log
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=info@yaffa.test
+MAIL_FROM_NAME=YAFFA
+
+### Configuration of external services ###
+# Your key for the Alpha Vantage API, which is used to fetch stock prices
+ALPHA_VANTAGE_KEY=
+
+MAILBOX_DRIVER=sendgrid
+INCOMING_RECEIPTS_EMAIL=
+MAILBOX_HTTP_PASSWORD=
+OPENAI_API_KEY=
+
+### Application-specific configuration ###
+# The maximum number of users that can be registered in the system.
+# For a personal instance, you can set this to 1 to prevent other people from registering.
+# Increase this value if you want to allow other users to register, or set it to empty to allow unlimited registrations.
+REGISTERED_USER_LIMIT=1
+
+# The email address of the administrator of the system, who will receive notifications about new users, logins, etc.
+# Leave this empty if you don't want to receive any notifications
+ADMIN_EMAIL=
+
+############################################################################################
+### The values below should be left as is, unless you really need to use custom settings ###
+############################################################################################
+
+# The name of the application, used in the UI
+APP_NAME=YAFFA
+
+# The environment in which the application is running
+APP_ENV=local
+
+# Telescope should not be enabled, unless Composer dev dependencies are installed
+TELESCOPE_ENABLED=FALSE
+
+# Debugbar should not be enabled, unless Composer dev dependencies are installed
+DEBUGBAR_ENABLED=FALSE
+
+# The URL of the application, used for generating links in emails
+APP_URL=http://localhost
+
+### Internal tools and services ###
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
-
-REGISTERED_USER_LIMIT=1
-ADMIN_EMAIL=admin@example.com
-
-#Translation sheet settings. DEV only
-TS_SERVICE_ACCOUNT_EMAIL=
-TS_SERVICE_ACCOUNT_CREDENTIALS_FILE=
-TS_SPREADSHEET_ID=
-TS_LOCALES=
-
-# Google Tag Manager
-GTM_CONTAINER_ID=   # If empty, GTM is not loaded
-
-# Sail
-WWWGROUP=1000
-WWWUSER=1000
-SAIL_XDEBUG_ENABLED=false
-SAIL_XDEBUG_PORT=9003
-SAIL_XDEBUG_MODE=develop,debug
-SAIL_XDEBUG_CONFIG="client_host=host.docker.internal"
-
-# Mail processing
-INCOMING_RECEIPTS_EMAIL="receipts@yaffa.test"
-
-OPENAI_API_KEY=
-
-MAILBOX_DRIVER=sendgrid
-MAILBOX_HTTP_PASSWORD=
-
-# Enlightn - optional, if you want to run the Enlightn security checks and save the results to their online dashboard
-ENLIGHTN_USERNAME=
-ENLIGHTN_API_TOKEN=
-
-# Sentry
-SENTRY_LARAVEL_DSN=your-sentry-dsn
-SENTRY_TRACES_SAMPLE_RATE=1.0
