--- a/.env.example.docker
+++ b/.env.example.docker
@@ -1,11 +1,13 @@
 # This file is a "template" of which env vars need to be defined for your application.
 # Copy this file as .env in the same directory with your docker-compose.yml file, and replace the values with your own
 # This version contains the minimal set of variables required to run your own YAFFA instance.
-# For a full list of available variables, see the .env.example file
+# For a full list of available variables, see the .env.example.complete file
 
 ### Basic app configuration ###
 
 # Encryption key used to encrypt session and other data
+# Make sure to keep this key secret, and don't share it with anyone.
+# Also, don't change it after you have started using the application.
 APP_KEY=PleaseReplaceThisWithARandomStringOf32Chars
 
 # Set this to true if you need to see detailed error messages
@@ -55,7 +57,7 @@ REGISTERED_USER_LIMIT=1
 # The email address of the administrator of the system, who will receive notifications about new users, logins, etc.
 # For Mailhog, this has not effect, but you can use your real email address if you use a real SMTP server
 # Leave this empty if you don't want to receive any notifications
-ADMIN_EMAIL=admin@example.com
+ADMIN_EMAIL=
 
 ############################################################################################
 ### The values below should be left as is, unless you really need to use custom settings ###
