feat: user verification is configurable via environment variable

--- a/.env.dusk.ci
+++ b/.env.dusk.ci
@@ -37,11 +37,11 @@ MAIL_FROM_ADDRESS=dusk@yaffa.test
 MAIL_FROM_NAME="${APP_NAME}"
 
 DEBUGBAR_ENABLED=FALSE
+TELESCOPE_ENABLED=FALSE
 
 ALPHA_VANTAGE_KEY=
 
-TELESCOPE_ENABLED=false
-
 REGISTERED_USER_LIMIT=0
+EMAIL_VERIFICATION_REQUIRED=FALSE
 ADMIN_EMAIL=admin@yaffa.test
 INCOMING_RECEIPTS_EMAIL=receipts@yaffa.test
