--- a/.env.example
+++ b/.env.example
@@ -48,10 +48,16 @@ MAILBOX_HTTP_PASSWORD=
 OPENAI_API_KEY=
 
 ### Application-specific configuration ###
+
 # The maximum number of users that can be registered in the system.
 # For a personal instance, you can set this to 1 to prevent other people from registering.
 # Increase this value if you want to allow other users to register, or set it to empty to allow unlimited registrations.
 REGISTERED_USER_LIMIT=1
+
+# Does new users have to verify their email address before they can log in?
+# For a local, personal instance, without access to outgoing emails, this should be set to false.
+# For a public instance, this should probably be set to true.
+EMAIL_VERIFICATION_REQUIRED=FALSE
 
 # The email address of the administrator of the system, who will receive notifications about new users, logins, etc.
 # Leave this empty if you don't want to receive any notifications
