--- a/.env.example.complete
+++ b/.env.example.complete
@@ -40,6 +40,7 @@ MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
 REGISTERED_USER_LIMIT=1
+EMAIL_VERIFICATION_REQUIRED=FALSE
 ADMIN_EMAIL=admin@example.com
 
 #Translation sheet settings. DEV only
