--- a/.env.ci
+++ b/.env.ci
@@ -42,5 +42,6 @@ MAIL_FROM_ADDRESS=test@yaffa.cc
 MAIL_FROM_NAME="${APP_NAME}"
 
 REGISTERED_USER_LIMIT=0
+EMAIL_VERIFICATION_REQUIRED=FALSE
 ADMIN_EMAIL=admin@example.com
 INCOMING_RECEIPTS_EMAIL=receipts@yaffa.test
