fix: add missing values to the .env.example files

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,7 @@ DB_PORT=3306
 DB_DATABASE=yaffa_db
 DB_USERNAME=yaffa_user
 DB_PASSWORD=yaffa_password
+DB_SOCKET=
 
 # Mail configuration
 MAIL_MAILER=log
@@ -91,3 +92,11 @@ SESSION_LIFETIME=120
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+# Enlightn - optional, if you want to run the Enlightn security checks and save the results to their online dashboard
+ENLIGHTN_USERNAME=
+ENLIGHTN_API_TOKEN=
+
+# Sentry - optional, if you want to use Sentry for error reporting
+SENTRY_LARAVEL_DSN=
+SENTRY_TRACES_SAMPLE_RATE=
