--- a/.env.example.complete
+++ b/.env.example.complete
@@ -69,6 +69,6 @@ MAILBOX_HTTP_PASSWORD=
 ENLIGHTN_USERNAME=
 ENLIGHTN_API_TOKEN=
 
-# Sentry
+# Sentry - optional, if you want to use Sentry for error reporting
 SENTRY_LARAVEL_DSN=your-sentry-dsn
 SENTRY_TRACES_SAMPLE_RATE=1.0
